# celery-fastapi-exp

./: Dockerfile  app.py  docker-compose.yml
first-step/: app.py  pyproject.toml
second-step/: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
second-step/proj/: celery.py
