[tool.poetry]
name = "celery-fastapi-exp"
version = "0.1.0"
description = ""
authors = ["hoang <giahoangth@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
celery = "^5.0.5"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
